<resources>
    <string name="app_name">VirtuahFin</string>
    <string name="main_cadastro_juridico">Cadastro Juridico</string>
    <string name="propostas">Gestão de Propostas</string>
    <string name="registro_diario">Registro Diário</string>
    <string name="rea_de_financas">Área de Finanças</string>
    <string name="createdby">CreatedBy Palloma Muller</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome_fantasia">Nome Fantasia</string>
    <string name="razao_social">Razão Social</string>
    <string name="cnpj">CNPJ</string>
    <string name="nome_do_responsavel">Nome do Responsável</string>
    <string name="telefone">Telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="tipo_de_contrato">Tipo de Contrato</string>
    <string name="cadastrar_pessoa_juridica">Cadastrar Pessoa Juridica</string>
    <string name="cadastrado_em">Cadastrado em</string>
    <string name="status">Status</string>
    <string name="editar">Editar</string>
    <string name="escolher_cliente">Escolher Cliente</string>
    <string name="escolher_assistente">Escolher Assistente</string>
    <string name="valor_cliente">Valor do Cliente</string>
    <string name="valor_assistente">Valor da Assistente</string>
    <string name="valor_parceiro">Valor do Parceiro</string>
    <string name="escolher_parceiro">Escolher Parceiro de Negócios</string>
    <string name="adicionar_parceiro_comercial">Adicionar um Parceiro Comercial</string>
    <string name="cadastrar_proposta">Cadastrar Proposta</string>
    <string name="data_prevista_para_termino">Data Prev. Final</string>
    <string name="data_de_inicio">Data de Início</string>
    <string name="forma_de_pagamento">Forma de Pagamento</string>
    <string name="horas_dia">Horas/dia</string>
    <string name="descricao_do_servico">Descrição do Serviço</string>
    <string name="cliente">Cliente</string>
    <string name="assistente">Assistente</string>
    <string name="parceiro">Parceiro</string>
    <string name="data_prev_final">Data Prev. Final</string>
    <string name="dias_totais">Dias Totais</string>
    <string name="data_de_finalizacao">Data de Finalização</string>
    <string name="informacoes_de_pagamentos">Informações de Pagamentos</string>
</resources>