<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_backgroud_degradee"
    tools:context=".ui.activity.CadastrarPessoaJuridicaActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadastro_juridico_til_nome_fantasia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:boxStrokeErrorColor="@android:color/holo_red_dark"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange_700"
        app:hintTextColor="@color/orange_700"
        app:cursorColor="@color/orange_700"
        app:boxStrokeWidthFocused="@dimen/cardview_default_elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_juridico_nome_fantasia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLength="60"
            android:maxLines="1"
            android:textColor="@color/black"
            android:hint="@string/nome_fantasia"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadastro_juridico_til_razao_social"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange_700"
        app:hintTextColor="@color/orange_700"
        app:cursorColor="@color/orange_700"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintEnd_toEndOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintTop_toBottomOf="@id/cadastro_juridico_til_nome_fantasia"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_juridico_razao_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:maxLength="60"
            android:textColor="@color/black"
            android:hint="@string/razao_social"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadastro_juridico_til_cnpj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange_700"
        app:hintTextColor="@color/orange_700"
        app:cursorColor="@color/orange_700"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintEnd_toEndOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintTop_toBottomOf="@id/cadastro_juridico_til_razao_social"
        app:helperText="Somente Números"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_juridico_cnpj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="1234567890"
            android:maxLines="1"
            android:maxLength="20"
            android:textColor="@color/black"
            android:hint="@string/cnpj" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadastro_juridico_til_nome_responsavel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange_700"
        app:hintTextColor="@color/orange_700"
        app:cursorColor="@color/orange_700"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintEnd_toEndOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintTop_toBottomOf="@id/cadastro_juridico_til_cnpj"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_juridico_nome_responsavel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:maxLength="60"
            android:textColor="@color/black"
            android:hint="@string/nome_do_responsavel"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadastro_juridico_til_telefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange_700"
        app:hintTextColor="@color/orange_700"
        app:cursorColor="@color/orange_700"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintEnd_toEndOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintTop_toBottomOf="@id/cadastro_juridico_til_nome_responsavel"
        app:helperText="Somente Números"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_juridico_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="1234567890"
            android:maxLines="1"
            android:maxLength="20"
            android:textColor="@color/black"
            android:hint="@string/telefone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadastro_juridico_til_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange_700"
        app:hintTextColor="@color/orange_700"
        app:cursorColor="@color/orange_700"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintEnd_toEndOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintTop_toBottomOf="@id/cadastro_juridico_til_telefone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_juridico_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:maxLength="60"
            android:textColor="@color/black"
            android:hint="@string/e_mail"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadastro_juridico_til_tipo_contrato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange_700"
        app:hintTextColor="@color/orange_700"
        app:cursorColor="@color/orange_700"
        android:layout_marginTop="14dp"
        android:keyboardNavigationCluster="false"
        app:layout_constraintStart_toStartOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintEnd_toEndOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintTop_toBottomOf="@id/cadastro_juridico_til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/cadastro_juridico_tipo_contrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineProvider="background"
            android:inputType="none"
            android:hint="@string/tipo_de_contrato"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cadastro_juridico_botao_cadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/main_button_model"
        android:text="@string/cadastrar_pessoa_juridica"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintEnd_toEndOf="@id/cadastro_juridico_til_nome_fantasia"
        app:layout_constraintTop_toBottomOf="@id/cadastro_juridico_til_tipo_contrato"/>

</androidx.constraintlayout.widget.ConstraintLayout>