<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_backgroud_degradee"
    tools:context=".ui.activity.PessoaJuridicaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/visualizar_pessoa_juridica_card_identificacao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/cardview_campo_informacoes"
                android:elevation="5dp"
                android:padding="8dp">

                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:text="@string/nome_fantasia"/>

                <TextView
                    android:id="@+id/visualizar_pessoa_juridica_nome_fantasia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    tools:text="@sample/pjs.json/pessoajuridica/razaosocial"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/razao_social"/>

                <TextView
                    android:id="@+id/visualizar_pessoa_juridica_razao_social"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    tools:text="Palloma LTDA"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/cnpj"/>

                <TextView
                    android:id="@+id/visualizar_pessoa_juridica_cnpj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    tools:text="32.125.547/0001-32"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/visualizar_pessoa_juridica_card_contato"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toBottomOf="@id/visualizar_pessoa_juridica_card_identificacao" Of="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/cardview_campo_informacoes"
                android:elevation="5dp"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:text="@string/nome_do_responsavel"/>

                <TextView
                    android:id="@+id/visualizar_pessoa_juridica_nome_responsavel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    tools:text="Palloma Muller"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/telefone"/>

                <TextView
                    android:id="@+id/visualizar_pessoa_juridica_telefone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    tools:text="(51) 99420 0462"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/e_mail"/>

                <TextView
                    android:id="@+id/visualizar_pessoa_juridica_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    tools:text="palloma.muller@hotmail.com"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/visualizar_pessoa_juridica_card_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toBottomOf="@id/visualizar_pessoa_juridica_card_contato">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/cardview_campo_informacoes"
                android:elevation="5dp"
                android:padding="8dp">

                <TextView
                    android:id="@+id/visualizar_pessoa_juridica_unused_tipo_contrato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:text="@string/tipo_de_contrato"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/visualizar_pessoa_juridica_tipo_contrato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    tools:text="ADMINISTRADOR"
                    app:layout_constraintStart_toStartOf="@id/visualizar_pessoa_juridica_unused_tipo_contrato"
                    app:layout_constraintTop_toBottomOf="@id/visualizar_pessoa_juridica_unused_tipo_contrato"/>

                <TextView
                    android:id="@+id/visualizar_pessoa_juridica_unused_data_cadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="18dp"
                    android:text="@string/cadastrado_em"
                    app:layout_constraintStart_toStartOf="@id/visualizar_pessoa_juridica_unused_tipo_contrato"
                    app:layout_constraintTop_toBottomOf="@id/visualizar_pessoa_juridica_tipo_contrato"/>

                <TextView
                    android:id="@+id/visualizar_pessoa_juridica_data_cadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    tools:text="22/10/2023"
                    app:layout_constraintStart_toStartOf="@id/visualizar_pessoa_juridica_unused_tipo_contrato"
                    app:layout_constraintTop_toBottomOf="@id/visualizar_pessoa_juridica_unused_data_cadastro"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/visualizar_pessoa_juridica_switvh_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:thumb="@drawable/switch_thumb"
                    app:track="@drawable/switch_track"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/visualizar_pessoa_juridica_unused_tipo_contrato"
                    app:layout_constraintBottom_toBottomOf="@id/visualizar_pessoa_juridica_data_cadastro"/>

                <TextView
                    android:id="@+id/visualizar_pessoa_juridica_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    tools:text="ATIVADO"
                    app:layout_constraintTop_toBottomOf="@id/visualizar_pessoa_juridica_switvh_status"
                    app:layout_constraintStart_toStartOf="@id/visualizar_pessoa_juridica_switvh_status"
                    app:layout_constraintEnd_toEndOf="@id/visualizar_pessoa_juridica_switvh_status"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/visualizar_pessoa_juridica_botao_editar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/editar"
            android:drawablePadding="5dp"
            android:paddingHorizontal="10dp"
            android:drawableStart="@drawable/ic_edit"
            android:background="@drawable/main_button_model"
            app:layout_constraintTop_toBottomOf="@+id/visualizar_pessoa_juridica_card_status"
            app:layout_constraintEnd_toStartOf="@id/visualizar_pessoa_juridica_botao_excluir"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/visualizar_pessoa_juridica_botao_excluir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_delete"
            android:padding="12dp"
            android:background="@drawable/main_button_model"
            app:layout_constraintEnd_toEndOf="@id/visualizar_pessoa_juridica_card_status"
            app:layout_constraintTop_toTopOf="@id/visualizar_pessoa_juridica_botao_editar"
            app:layout_constraintBottom_toBottomOf="@id/visualizar_pessoa_juridica_botao_editar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>